--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "natural": "^6.10.4",
     "node-jose": "^2.2.0",
     "node-localstorage": "^3.0.5",
-    "node-symspell": "^0.1.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "openai": "^4.24.1",
@@ -48,5 +47,8 @@
     "typo-js": "^1.2.3",
     "wink-eng-lite-web-model": "^1.5.2",
     "wink-nlp": "^1.14.3"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
