--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "chat": "nodemon src/app.js -e js,hbs",
+    "start": "nodemon src/app.js -e js,hbs",
     "build": "webpack --mode production"
   },
   "keywords": [],
